# Custom-MediaPipe

./: .gitignore  BUILD  MODULE.bazel  README.md  package.json  tsconfig.json
mediapipe/: __init__.py
mediapipe/calculators/core/: BUILD
mediapipe/desktop/hello_world/: BUILD
mediapipe/examples/desktop/hello_world/: BUILD  hello_world.cc
mediapipe/framework/: BUILD  calculator.proto  calculator_base.h  calculator_context.h  calculator_framework.h  calculator_options.proto  calculator_state.h  counter.h  counter_factory.cc  counter_factory.h  graph_service.h  mediaipipe_options.proto  packet.h  packet_factory.proto  port.h  status_handler.proto  stream_handler.proto  transitive_protos.bzl
mediapipe/framework/formats/: BUILD
mediapipe/framework/port/: BUILD  build_config.bzl  integral_types.h  logging.h  map_util.h
mediapipe/framework/tool/: mediaipipe_proto.bzl  mediapipe_graph.bzl  mediapipe_proto.bzl
mediapipe/gpu/: BUILD
